--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 					<header id="header">
 						<div class="logo">
 							<!-- <span class="icon fa-gem"></span> -->
-							<img src="/images/logo-R.png" alt="logo" style="width: inherit;">
+							<img src="/images/photo-profile.png" alt="logo" style="width: inherit;">
 						</div>
 						<div class="content">
 							<div class="inner">
+								<pre style="margin-bottom:1em;"><code id="anim-type"></code></pre>
 								<h1>WEB DEVELOPER</h1>
-								<p>Hello, welcome to my portfolio.</p>
+								<p>welcome to my portfolio</p>
 							</div>
 						</div>
 						<nav>
@@ -36,7 +37,7 @@
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!-- <li><a href="#elements">Elements</a></li> -->
+								<li><a href="#elements">Elements</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -47,9 +48,12 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<blockquote>I have principles <strong><u> "We Will Never Know The Real Answer Before We Try".</u></strong><br>
+								Someone who likes new things,always learns and like challenges.</blockquote>
+									
+								<!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
+								<!-- <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p> -->
 							</article>
 
 						<!-- Work -->
@@ -358,6 +362,19 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			
+			<script>
+				var i=0,text;
+				text = "Hellooo !!! I am a ..."
+			  
+				function type() {
+				  if(i<text.length){
+					document.getElementById("anim-type").innerHTML += text.charAt(i);
+					i++;
+					setTimeout(type,80);
+				  }
+				}
+				type();
+			  </script>
 	</body>
 </html>
