--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">Personal Profile</h2>
 								<blockquote>I have principles <strong><u> "We Will Never Know The Real Answer Before We Try".</u></strong><br>
-								Someone who likes new things,always learns and like challenges.</blockquote>
+								Someone who likes new things, always learns and like challenges.</blockquote>
 									
 								<!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
 								<!-- <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
@@ -58,10 +58,33 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<h2 class="major">Work Experience</h2>
+								<h4>Web Developer (Front-End)</h4>
+									<ol>
+										<li><strong>CV. NEWTRONIC - SOLUTION</strong> | 2020 - current</li>
+										<ul>
+											<li>Web Booking	- BANK INDONESIA</li>
+											<li>QueLA Antrian	- BANK INDONESIA</li>
+											<li>iQue Client		- BANK JAWA BARAT</li>
+											<li>iQue Client		- BANK RAKYAT INDONESIA</li>
+										</ul>
+										<li><strong>PT. HEXA MAJU SAMASTA</strong> | 2019 - 2020</li>
+										<ul>
+											<li>KMOB (Kinerja Mobile)	- PEMDA DEPOK, PEMDA BOGOR</li>
+											<li>E-OFFICE (Digital Signature)	- KEMENDAGRI</li>
+											<li>FASTPUM (Fasilitas Perizinan Umum)		- PEMPROV JAWA BARAT</li>
+										</ul>
+									</ol>
+								<h4>Technical Support</h4>
+									<ol>
+										<li><strong>passionIT</strong> | 2017 - 2019</li>
+										<ul>
+											<li>Troubleshooting, monitoring, installation and maintanance.</li>
+										</ul>
+									</ol>
+								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p> -->
 							</article>
 
 						<!-- About -->
@@ -371,7 +394,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				  if(i<text.length){
 					document.getElementById("anim-type").innerHTML += text.charAt(i);
 					i++;
-					setTimeout(type,80);
+					setTimeout(type,130);
 				  }
 				}
 				type();
