--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#about">Project</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="#elements">Elements</a></li>
 							</ul>
@@ -50,16 +50,36 @@
 								<h2 class="major">Personal Profile</h2>
 								<blockquote>I have principles <strong><u> "We Will Never Know The Real Answer Before We Try".</u></strong><br>
 								Someone who likes new things, always learns and like challenges.</blockquote>
-									
-								<!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
-								<!-- <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p> -->
+								<h3>Bio</h3>
+								<div class="table-wrapper">
+									<table>
+										<tbody>
+											<tr>
+												<td>Name</td>
+												<td>Ricky Rahman Sidiq</td>
+											</tr>
+											<tr>
+												<td>Place, Date Of Birth</td>
+												<td>Magelang, 13 July 1995</td>
+											</tr>
+											<tr>
+												<td>Address</td>
+												<td> <address>Sukaasih, RT 02 / RW 09 Mandalajati, Bandung</address></td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+								<h3>Education History</h3>
+								<ul>
+									<li>ARS UNIVERSITY - ( 2019 - current ) </li>
+									<li>SMK YUDYA KARYA - ( 2010 - 2013 )</li>
+								</ul>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work Experience</h2>
-								<h4>Web Developer (Front-End)</h4>
+								<h3>Web Developer (Front-End)</h3>
 									<ol>
 										<li><strong>CV. NEWTRONIC - SOLUTION</strong> | 2020 - current</li>
 										<ul>
@@ -75,16 +95,13 @@
 											<li>FASTPUM (Fasilitas Perizinan Umum)		- PEMPROV JAWA BARAT</li>
 										</ul>
 									</ol>
-								<h4>Technical Support</h4>
+								<h3>Technical Support</h3>
 									<ol>
 										<li><strong>passionIT</strong> | 2017 - 2019</li>
 										<ul>
 											<li>Troubleshooting, monitoring, installation and maintanance.</li>
 										</ul>
 									</ol>
-								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p> -->
 							</article>
 
 						<!-- About -->
@@ -96,8 +113,8 @@
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<h2 class="major">Get In Contact</h2>
+								<!-- <form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -116,12 +133,11 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
-								</form>
+								</form> -->
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/ricky-rahman-sidiq-0043ab14b" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://wa.me/6281555922675" class="icon brands fa-whatsapp"><span class="label">Whatsapp</span></a></li>
+									<li><a href="mailto:rickyr1307@gmail.com"  class="icon fa-envelope"><span class="label">E-mail</span></a></li>
 								</ul>
 							</article>
 
@@ -388,7 +404,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			
 			<script>
 				var i=0,text;
-				text = "Hellooo !!! I am a ..."
+				text = "Hi...!!! I am a ..."
 			  
 				function type() {
 				  if(i<text.length){
