skill + cv download

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">Project</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href="#elements">Elements</a></li>
+								<li><a href="./assets/pdf/CV_Ricky.pdf" download="CV_RICKY" class="icon solid fa-download"> CV</a></li>
+								<!-- <li><a href="#elements">Elements</a></li> -->
 							</ul>
 						</nav>
 					</header>
@@ -69,6 +70,15 @@
 										</tbody>
 									</table>
 								</div>
+								<h3>SKill</h3>
+									<ul class="alt">
+										<li><i class="fab fa-html5"></i> Html</li>
+										<li><i class="fab fa-css3-alt"></i> CSS</li>
+										<li><i class="fab fa-js-square"></i> JavaScript</li>
+										<li><img src="/images/jquery.svg" style="width: 1em; background-color: #ffff;"> jQuery</li>
+										<li><i class="fab fa-react"></i> ReactJS</li>
+										<li><img src="/images/rest-api.svg" style="width: 1em; background-color: #ffff;"> Rest API</li>
+									</ul>
 								<h3>Education History</h3>
 								<ul>
 									<li>ARS UNIVERSITY - ( 2019 - current ) </li>
