--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 									<li class="collapsible">
 										<h3>iQue Client - BANK JAWA BARAT</h2>
 										<div class="content-collapse">
+											<span class="image main"><img src="images/bri/login.PNG" alt="" /></span>
 											<span class="image main"><img src="images/bjb/client-min.png" alt="" /></span>
 											<p class="describe">
 												This application was developed to facilitate the work of customer services and tellers at BJB. And also make it easier or make customers comfortable when waiting in line.</p>
@@ -144,6 +145,7 @@
 									<li class="collapsible">
 										<h3>iQue Client - BANK RAKYAT INDONESIA</h2>
 										<div class="content-collapse">
+											<span class="image main"><img src="images/bri/login.PNG" alt="" /></span>
 											<span class="image main"><img src="images/bri/client.PNG" alt="" /></span>
 											<p class="describe">
 												This application was developed to facilitate the work of customer services and tellers at BRI. And also make it easier or make customers comfortable when waiting in line.</p>
