--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 				<ol>
 					<li><strong>CV. NEWTRONIC - SOLUTION</strong> | 2020 - current</li>
 					<ul>
+						<li>iQue Cloud - PROJECT INTERN</li>
 						<li>Web Booking - BANK INDONESIA</li>
 						<li>QueLA Antrian - BANK INDONESIA</li>
 						<li>iQue Client - BANK JAWA BARAT</li>
@@ -510,7 +511,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<p class="copyright">&copy; 2021 | Ricky</p>
+			<p class="copyright">&copy; 2022 | Ricky</p>
 		</footer>
 
 	</div>
