--- a/index.html
+++ b/index.html
@@ -512,6 +512,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 		<footer id="footer">
 			<p class="copyright">&copy; 2022 | Ricky</p>
+			<?php
+$current_year = date('Y');
+echo "Tahun saat ini adalah " . $current_year;
+?>
 		</footer>
 
 	</div>
