--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">Personal Profile</h2>
-				<blockquote>I have principles <strong><u> "We Will Never Know The Real Answer Before We
-							Try".</u></strong><br>
+				<blockquote>I have the principles <strong><u> “We Will Never Know The Real Answer Before We Try”.</u></strong><br>
 					Someone who likes new things, always learns and like challenges.</blockquote>
 				<h3>Bio</h3>
 				<div class="table-wrapper">
@@ -90,7 +89,7 @@
 				</ul>
 				<h3>Education History</h3>
 				<ul>
-					<li>ARS UNIVERSITY - ( 2019 - current ) </li>
+					<li>ARS UNIVERSITY - ( 2018 - 2022 ) </li>
 					<li>SMK YUDYA KARYA - ( 2010 - 2013 )</li>
 				</ul>
 			</article>
