--- a/home.html
+++ b/home.html
@@ -6,17 +6,28 @@
 -->
 <html>
 
-<head>
-	<title>Ricky's Portofolio</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="shortcut icon" href="/images/logo-R.png">
-	<link rel="stylesheet" href="assets/css/custom.css" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
-	</noscript>
-</head>
+	<head>
+		<meta charset="utf-8" />
+		<title>Ricky's Portofolio</title>
+		<link rel="manifest" href="/manifest.json">
+		
+		<link rel="shortcut icon" href="/images/logo-R.png">
+		<link rel="stylesheet" href="assets/css/custom.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript>
+			<link rel="stylesheet" href="assets/css/noscript.css" />
+		</noscript>
+	
+		<link rel="apple-touch-icon" href="images/logo-R-152.png">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="theme-color" content="white"/>
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-title" content="Ricky's Portofolio">
+		<meta name="msapplication-TileImage" content="/images/logo-R.png">
+		<meta name="msapplication-TileColor" content="#FFFFFF">
+	</head>
+	
 
 <body class="is-preload">
 
@@ -80,12 +91,14 @@
 				</div>
 				<h3>SKill</h3>
 				<ul class="alt">
-					<li><i class="fab fa-html5"></i> Html</li>
-					<li><i class="fab fa-css3-alt"></i> CSS</li>
+					<li><i class="fab fa-react"></i> ReactJS</li>
 					<li><i class="fab fa-js-square"></i> JavaScript</li>
 					<li><img src="/images/jquery.svg" style="width: 1em; background-color: #ffff;"> jQuery</li>
-					<li><i class="fab fa-react"></i> ReactJS</li>
 					<li><img src="/images/rest-api.svg" style="width: 1em; background-color: #ffff;"> Rest API</li>
+					<li><i class="fab fa-git-alt"></i> Git</li>
+					<li><i class="fa-brands fa-bitbucket"> Bitbucket</i></li>
+					<li><i class="fab fa-css3-alt"></i> CSS</li>
+					<li><i class="fab fa-html5"></i> Html</li>
 				</ul>
 				<h3>Education History</h3>
 				<ul>
