--- a/home.html
+++ b/home.html
@@ -538,6 +538,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/custom.js"></script>
+	<script src="js-pwa/main-pwa.js"></script>
 
 	<script>
 		var i = 0, text;
