--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
 					<li><a href="#work">Work</a></li>
 					<li><a href="#project">Project</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a href="./assets/pdf/CV_Ricky.pdf" download="CV_RICKY" class="icon solid fa-download"> CV</a>
+					<li><a href="./assets/pdf/Ricky_CV.pdf" download="CV_RICKY" class="icon solid fa-download"> CV</a>
 					</li>
 					<!-- <li><a href="#elements">Elements</a></li> -->
 				</ul>
